--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   <br />
   <br />
   <br />
-  required placeholder="Enter Username" name="name" [ngModel] /><br /><br />
+  <input required placeholder="Enter Username" name="name" [ngModel] /><br /><br />
   <input
     type="password"
     required
